Fix Styling Horizontal Scroll Menu

--- a/src/App.css
+++ b/src/App.css
@@ -26,12 +26,6 @@
   transform: scale(1.3, 1.3);
 }
 
-.react-horizontal-scrolling-menu--wrapper {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .detail-image {
   width: 729px;
   height: 742px;
